SimpleMicroServiceNodejs/envoy/envoy.yaml
static_resources:
  listeners:
    - name: listeners_0
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080
      filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config: 
              '@type': "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager"
              stat_prefix: http_proxy
              route_config: 
                name: all
                virtual_hosts:
                  - name: allbackend
                    domains: 
                      - '*'
                    routes:
                      - match: { prefix: "/boy"}
                        direct_response: {status: 200, body: { inline_string: "Welcome"} }
                      - match: { prefix: "/micro1/"}
                        route:
                          prefix_rewrite: "/"
                          cluster: allbackend_cluster_1
                      - match: { prefix: "/micro2/"}
                        route:
                          prefix_rewrite: "/"
                          cluster: allbackend_cluster_2
                      - match: { prefix: "/"}
                        route:
                          cluster: allbackend_cluster
              http_filters:
                  - name: envoy.filters.http.router
  clusters:
    - name: allbackend_cluster
      connect_timeout: 2s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: allbackend_cluster
        endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: micro1
                    port_value: 3011
            - endpoint:
                address:
                  socket_address:
                    address: micro2
                    port_value: 3012
    - name: allbackend_cluster_1
      connect_timeout: 2s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: allbackend_cluster_1
        endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: micro1
                    port_value: 3011
    - name: allbackend_cluster_2
      connect_timeout: 2s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: allbackend_cluster_2
        endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: micro2
                    port_value: 3012
